backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviduino-backend
  labels:
    app: serviduino-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: serviduino-backend
